--- a/feeds-style.css
+++ b/feeds-style.css
@@ -1,9 +1,18 @@
 .post {
-    border: 1px solid black;
-    background-color: lightgray;
-    padding: 0px 10px;
-    margin: 0px 10px;
+    border: 1px solid #f2be54;
+    border-radius: 10px;
+    background-color: #e0ffff;
+    padding: 10px 10px 10px 10px;
+    margin: 0px 10px 10px 10px;
 }
 
 .post-button {
+
+}
+
+user-comment {
+    margin-left: 30px;
+}
+
+user-comments {
 }
